@@ -28,6 +28,9 @@
    - improved code testability and added unit-tests
  * Basic Datasource API integration and keyspace/cluster level settings (SPARKC-112, SPARKC-162)
  * Added support to use aliases with Tuples (SPARKC-125)
+ * Add Custom UUIDType and InetAddressType to Spark Sql data type mapping (SPARKC-129)
+
+
 ********************************************************************************
 
 ********************************************************************************
